# Cryptic

./: CMakeLists.txt  LICENSE  README.md  constants.c  constants.h  main.c  utils.c  utils.h
cyphers/: auto.c  caesar.c  playfair.c  railfence.c  subst.c  vigenere.c
includes/: auto.h  caesar.h  playfair.h  railfence.h  subst.h  vigenere.h
test/: input.txt  input2.txt  output.txt
